2009-07-17  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (md_assemble): Check implicit registers
	only for instructions with 3 operands or less.

2009-07-17  Nick Clifton  <nickc@redhat.com>

	* config/tc-avr.c (md_apply_fix): Cast fixup reloc type to avoid
	compile time warning.

2009-07-16  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (md_assemble): Only check i.operands for AX.
	(md_estimate_size_before_relax): Don't relax IFUNC symbols.

2009-07-16  Nathan Sidwell  <nathan@codesourcery.com>

	* config/tc-arm.c (md_apply_fix <BFD_RELOC_ARM_TARGET2>): Write
	the offset for REL targets here.

2009-07-15  Kai Tietz  <kai.tietz@onevision.com>

	* listing.c (print_source): Initialize cache by NULL.

2009-07-15  Daniel Gutson  <dgutson@codesourcery.com>

	* doc/c-arm.texi (mauto-it): Removed old option.
	(mimplicit-it): Added right option.

2009-07-14  Daniel Gutson  <dgutson@codesourcery.com>

	* config/tc-arm.h (MAX_MEM_ALIGNMENT_BYTES): Define.
	(MAX_MEM_FOR_RS_ALIGN_CODE): Define in terms of
	MAX_MEM_ALIGNMENT_BYTES.
	* config/tc-arm.c (arm_frag_align_code): Replace hard coded
	constant with MAX_MEM_FOR_RS_ALIGN_CODE.

2009-07-14  Nick Clifton  <nickc@redhat.com>

	PR 10387
	* config/tc-arm.h (THUMB_IS_FUNC): Handle a NULL pointer.
	(ARM_IS_FUNC): Likewise.

2009-07-14  Daniel Gutson  <dgutson@codesourcery.com>

	* config/tc-arm.c (md_assemble): Added validation.

2009-07-10  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerated.

2009-07-10  Tom Tromey  <tromey@redhat.com>

	* Makefile.am (DEPTC_alpha_ecoff): Refer to dwarf2.h, not
	elf/dwarf2.h.
	(DEPTC_alpha_elf): Likewise.
	(DEPTC_alpha_evax): Likewise.
	(DEPTC_arm_elf): Likewise.
	(DEPTC_hppa_elf): Likewise.
	(DEPTC_i386_aout): Likewise.
	(DEPTC_i386_coff): Likewise.
	(DEPTC_i386_elf): Likewise.
	(DEPTC_m68k_aout): Likewise.
	(DEPTC_m68k_coff): Likewise.
	(DEPTC_m68k_elf): Likewise.
	(DEPTC_mips_coff): Likewise.
	(DEPTC_mips_ecoff): Likewise.